--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
@@ -121,7 +125,7 @@
           </div>
           <div class="stat-item"><span class="s-num">40%</span><span class="s-lbl">Ahorro posible con rutas
               verdes</span></div>
-          <div class="stat-item"><span class="s-num">5</span><span class="s-lbl">Secciones de formación</span></div>
+          <div class="stat-item"><span class="s-num">4</span><span class="s-lbl">Secciones de formación</span></div>
           <div class="stat-item"><span class="s-num">100%</span><span class="s-lbl">Enfoque educativo</span></div>
         </div>
       </div>
@@ -144,6 +148,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
@@ -340,7 +348,7 @@
           </svg>Origen e historia</h3>
         <div class="exp-history">
           <div class="exp-person fade-in fade-in-d1">
-            <div class="exp-person-avatar"><img src="AUTHOR.png" alt="Martin Christopher"
+            <div class="exp-person-avatar"><img src="author.png" alt="Martin Christopher"
                 onerror="this.parentElement.innerHTML='<svg viewBox=\'0 0 24 24\'><path d=\'M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2\'/><circle cx=\'12\' cy=\'7\' r=\'4\'/></svg>'">
             </div>
             <h3>Martin Christopher</h3>
@@ -361,7 +369,7 @@
     <div class="cat-guide" id="catGuide">
       <div class="cat-bubble" id="catBubble">
         <div class="cat-bubble-arrow"></div>
-        <p id="catMsg">¡Hola! Soy Kenji 🐱 Tu guía en esta página. ¡Haz clic en mí para explorar!</p>
+        <p id="catMsg">¡Hola! Soy Kenji  Tu guía en esta página. ¡Haz clic en mí para explorar!</p>
       </div>
       <img src="cat.png" alt="Kenji el gato guía" class="cat-img" id="catImg" onclick="catNextTip()" />
     </div>
@@ -384,6 +392,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button class="active" onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
@@ -658,6 +670,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
@@ -1120,6 +1136,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
@@ -1480,6 +1500,10 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <polyline points="9 22 9 12 15 12 15 22" />
               </svg>Inicio</button></li>
+          <li><button onclick="goTo('explorar')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
+              </svg>Logística Verde</button></li>
           <li><button onclick="goTo('impacto')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
