--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           </svg>Origen e historia</h3>
         <div class="exp-history">
           <div class="exp-person fade-in fade-in-d1">
-            <div class="exp-person-avatar"><img src="author.png" alt="Martin Christopher"
+            <div class="exp-person-avatar"><img src="AUTHOR.png" alt="Martin Christopher"
                 onerror="this.parentElement.innerHTML='<svg viewBox=\'0 0 24 24\'><path d=\'M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2\'/><circle cx=\'12\' cy=\'7\' r=\'4\'/></svg>'">
             </div>
             <h3>Martin Christopher</h3>
