--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           </svg>Origen e historia</h3>
         <div class="exp-history">
           <div class="exp-person fade-in fade-in-d1">
-            <div class="exp-person-avatar"><img src="AUTHOR.png" alt="Martin Christopher"
+            <div class="exp-person-avatar"><img src="ARTHUR.png" alt="Martin Christopher"
                 onerror="this.parentElement.innerHTML='<svg viewBox=\'0 0 24 24\'><path d=\'M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2\'/><circle cx=\'12\' cy=\'7\' r=\'4\'/></svg>'">
             </div>
             <h3>Martin Christopher</h3>
@@ -528,7 +528,7 @@
               <div>
                 <div class="sec-lbl" style="margin-bottom:8px;"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width:14px;height:14px"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>Panamá · Logística y medioambiente</div>
                 <h3 class="chart-title" id="chartTitle">¿Cuánto contamina el transporte en Panamá?</h3>
-                <p class="chart-sub" id="chartSub">La línea gris muestra lo que pasó de verdad. Desde 2026: qué pasa si no hacemos nada (rojo) vs. si adoptamos logística verde (verde).</p>
+                <p class="chart-sub" id="chartSub">La línea gris muestra lo que pasó de verdad. Desde 2026: qué pasa si no hacemos nada vs si adoptamos logística verde.</p>
               </div>
               <div class="chart-legend" id="chartLegend">
                 <span class="cleg cleg--gray"><span></span>Histórico real</span>
