Update hero title text to lowercase

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <div class="h-ground"></div>
       <div class="hero-content">
         <h1 class="hero-title">
-          Estudiantes Unidos por un Futuro<br>
-          <span class="accent">Renovable</span>
+          Estudiantes unidos por un futuro<br>
+          <span class="accent">renovable</span>
         </h1>
 
         <p class="hero-sub">Descubre cómo las operaciones logísticas pueden transformarse para construir un futuro más
