--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <div class="h-ground"></div>
       <div class="hero-content">
         <h1 class="hero-title">
-          Estudiantes unidos por un futuro<br>
-          <span class="accent">renovable</span>
+          Estudiantes Unidos por un Futuro<br>
+          <span class="accent">Renovable</span>
         </h1>
 
         <p class="hero-sub">Descubre cómo las operaciones logísticas pueden transformarse para construir un futuro más
@@ -348,7 +348,7 @@
           </svg>Origen e historia</h3>
         <div class="exp-history">
           <div class="exp-person fade-in fade-in-d1">
-            <div class="exp-person-avatar"><img src="AUTHOR.png" alt="Martin Christopher"
+            <div class="exp-person-avatar"><img src="ARTHUR.png" alt="Martin Christopher"
                 onerror="this.parentElement.innerHTML='<svg viewBox=\'0 0 24 24\'><path d=\'M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2\'/><circle cx=\'12\' cy=\'7\' r=\'4\'/></svg>'">
             </div>
             <h3>Martin Christopher</h3>
@@ -464,15 +464,12 @@
             </div>
             <!-- Tarjeta 2 -->
             <div class="ic fade-in fade-in-d2">
-              <div class="ic-ico"><svg viewBox="0 0 24 24">
-                  <path
-                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z" />
+              <div class="ic-ico"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M3 6h18M3 12h18M3 18h18"/>
                 </svg></div>
-              <h3>Contaminación del agua</h3>
-              <p>Los derrames de combustible, aguas residuales industriales y residuos de almacenes contaminan cuencas
-                hidrográficas cercanas a centros logísticos.</p>
-              <div class="ic-stat"><span class="n">15M</span><span class="u">toneladas de residuos generados</span>
-              </div>
+              <h3>Residuos sólidos globales</h3>
+              <p>El mundo genera más de 2 mil millones de toneladas de residuos sólidos municipales al año. Al menos el 33% no se gestiona de forma ambientalmente segura, contaminando suelos y cuencas hídricas.</p>
+              <div class="ic-stat"><span class="n">+1.1M</span><span class="u">sitios contaminados identificados en 131 países</span></div>
             </div>
             <!-- Tarjeta 3 -->
             <div class="ic fade-in fade-in-d3">
@@ -481,21 +478,8 @@
                     d="M17 8C8 10 5.9 16.17 3.82 19.82L5.71 21l1-1.9A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2-8 2s-7.26.55-7 7c.24 5.92 7 9 7 9s-2.18-3.15-2-6c.4-5.5 11-8 11-8C22 3 22 3 17 8z" />
                 </svg></div>
               <h3>Pérdida de biodiversidad</h3>
-              <p>La expansión de infraestructura logística fragmenta hábitats naturales y reduce corredores biológicos
-                esenciales para la fauna local.</p>
-              <div class="ic-stat"><span class="n">40%</span><span class="u">reducción posible con logística
-                  verde</span></div>
-            </div>
-            <!-- Tarjeta 4 -->
-            <div class="ic fade-in fade-in-d1">
-              <div class="ic-ico"><svg viewBox="0 0 24 24">
-                  <path d="M3 3h18v4H3zM3 10h18v4H3zM3 17h18v4H3z" />
-                </svg></div>
-              <h3>Contaminación del suelo</h3>
-              <p>El manejo inadecuado de residuos sólidos y químicos en almacenes y puertos genera contaminación
-                prolongada del suelo que afecta ecosistemas locales.</p>
-              <div class="ic-stat"><span class="n">3.2M</span><span class="u">ha de suelo afectado anualmente</span>
-              </div>
+              <p>La expansión de infraestructura logística fragmenta hábitats naturales y reduce corredores biológicos esenciales para la fauna local.</p>
+              <div class="ic-stat"><span class="n">80%</span><span class="u">de las Áreas Clave de Biodiversidad mundiales contienen infraestructura de transporte</span></div>
             </div>
             <!-- Tarjeta 5 -->
             <div class="ic fade-in fade-in-d2">
