--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@
           <p class="bib-intro">Las fuentes consultadas incluyen fuentes académicas, videos educativos, páginas institucionales y documentos en línea proporcionados por Perplexity.</p>
 
           <div class="bib-group">
-            <div class="bib-group-title">Logística verde — Definición y conceptos clave</div>
+            <div class="bib-group-title">Logística verde — Definición, conceptos clave y datos</div>
             <ol class="bib-list">
               <li>SAP Concur Team. (2022, mayo 9). <em>¿Qué es la logística verde? Claves para entenderla.</em> SAP Concur México. <a href="https://www.concur.com.mx/blog/article/logistica-verde-mx" target="_blank" rel="noopener">https://www.concur.com.mx/blog/article/logistica-verde-mx</a></li>
               <li>CEUPE Argentina. <em>Logística verde.</em> CEUPE Blog. <a href="https://ceupe.com.ar/blog/logistica-verde/" target="_blank" rel="noopener">https://ceupe.com.ar/blog/logistica-verde/</a></li>
@@ -1707,6 +1707,7 @@
               <li>Quadminds. <em>¿Qué es la logística verde y por qué implementarla?</em> Quadminds Blog. <a href="https://www.quadminds.com/blog/que-es-la-logistica-verde-y-por-que-implementarla/" target="_blank" rel="noopener">https://www.quadminds.com/blog/que-es-la-logistica-verde-y-por-que-implementarla/</a></li>
               <li>Consejo Empresarial Logístico de Panamá (COEL). <em>¿Qué es la logística verde?</em> COEL Panamá. <a href="https://www.coelpanama.org/post/-que-es-la-logistica-verde-" target="_blank" rel="noopener">https://www.coelpanama.org/post/-que-es-la-logistica-verde-</a></li>
               <li>The Logistics World. (2022, noviembre 29). <em>Logística verde: 10 empresas que la realizan con éxito.</em> <a href="https://thelogisticsworld.com/planeacion-estrategica/10-empresas-exitosas-que-realizan-logistica-verde/" target="_blank" rel="noopener">https://thelogisticsworld.com/planeacion-estrategica/10-empresas-exitosas-que-realizan-logistica-verde/</a></li>
+              <li>Simkins, A., et al. (2023, marzo 23). <em>A global assessment of the prevalence of current and potential future infrastructure in Key Biodiversity Areas.</em> Biological Conservation. <a href="https://www.sciencedirect.com/science/article/pii/S0006320723000538" target="_blank" rel="noopener">https://www.sciencedirect.com/science/article/pii/S0006320723000538</a></li>
             </ol>
           </div>
 
