Update section description in index.html
Removed the call to action for adding links.

--- a/index.html
+++ b/index.html
@@ -1178,8 +1178,7 @@
                 <path d="M6.5 2H20v20H6.5A2.5 2.5 0 014 19.5v-15A2.5 2.5 0 016.5 2z" />
               </svg>Recursos Educativos</div>
             <h2 class="sec-title">Material para<br>profundizar</h2>
-            <p class="sec-sub">Cursos, videos y páginas web seleccionados sobre logística sostenible. ¡Agrega tus
-              propios enlaces!</p>
+            <p class="sec-sub">Cursos, videos y páginas web seleccionados sobre logística sostenible. </p>
           </div>
 
           <!-- TABS -->
